# aml4d-group-3-assignment-1

./: examples_of_topics.csv  lda_model  lda_model.expElogbeta.npy  lda_model.id2word  lda_model.state  main.py  pyproject.toml  sentiment_analysis.py  wordclouds.py
data/: voyant_needs_export.csv
